--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,10 +7,11 @@
 <div class="content">
     <h1 style="text-align: center" class="mt-4">NAJLEPSZE OFERTY</h1>
 
-<!--    <div th:each="car: ${cars}">-->
-<!--        <h2 th:text="${car.title}"></h2>-->
-<!--        <p th:text="|Cena: ${car.price} zł|"></p>-->
-<!--    </div>-->
+    <div th:each="car: ${cars}">
+        <h2 th:text="${car.carModel}"></h2>
+        <p th:text="${car.carMake}"></p>
+        <p th:text="|Cena: ${car.price} zł|"></p>
+    </div>
 
     <a href="/auctions">Zobacz wszystkie dostępne samochody</a>
 
